2003-03-12  Moritz Schulte  <moritz@g10code.com>

	* primegen.c: Initialize `no_of_small_prime_numbers' statically.
	(gen_prime): Remove calculation of `no_of_small_prime_numbers'.

2003-03-03  Moritz Schulte  <moritz@g10code.com>

	* md.c (gcry_md_ctl): Rewritten to use same style like the other
	functions dispatchers.

2003-03-02  Moritz Schulte  <moritz@g10code.com>

	* cipher.c (struct gcry_cipher_handle): New member: algo_index.
	(gcry_cipher_open): Allocate memory for two cipher contexts.
	Initialize algo_index.
	(cipher_setkey): Duplicate context into reserved memory.
	(cipher_reset): New function, which resets the context and clear
	the IV.
	(gcry_cipher_ctl): Call cipher_reset.

2003-02-23  Moritz Schulte  <moritz@g10code.com>

	* cipher.c: Remove (bogus) `digitp' macro definition.
	* md.c: Likewise.

	* blowfish.c (burn_stack): Removed.
	* arcfour.c (burn_stack): Likewise.
	* cast5.c (burn_stack): Likewise.
	* des.c (burn_stack): Likewise.
	* md4.c (burn_stack): Likewise.
	* md5.c (burn_stack): Likewise.
	* random.c (burn_stack): Likewise.
	* rijndael.c (burn_stack): Likewise.
	* rmd160.c (burn_stack): Likewise.
	* sha1.c (burn_stack): Likewise.
	* sha256.c (burn_stack): Likewise.
	* tiger.c (burn_stack): Likewise.
	* twofish.c (burn_stack): Likewise.

	* blowfish.c: Changed all occurences of burn_stack to
	_gcry_burn_stack.
	* arcfour.c: Likewise.
	* cast5.c: Likewise.
	* des.c: Likewise.
	* md4.c: Likewise.
	* md5.c: Likewise.
	* random.c: Likewise.
	* rijndael.c: Likewise.
	* rmd160.c: Likewise.
	* sha1.c: Likewise.
	* sha256.c: Likewise.
	* tiger.c: Likewise.
	* twofish.c: Likewise.

	* arcfour.c (_gcry_arcfour_get_info): Use GCRY_CIPHER_ARCFOUR
	instead of hard-coded value `301'.

2003-01-24  Werner Koch  <wk@gnupg.org>

	* random.c (_gcry_register_random_progress): New.
	(_gcry_random_progress): New.

	* rndlinux.c (gather_random): Call the random progress function. 

2003-01-23  Werner Koch  <wk@gnupg.org>
